firestore-path-helper/crates/firestore-path-helper-proc-macro/tests/ui/fail_format_empty.rs
fn main() {
    firestore_path_helper_proc_macro::firestore_path_helper!("", user_id = String);
}
